objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <displayFormat>St-{000}</displayFormat>
        <label>StudentNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Text</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>New_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Phone__c ))</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Phone Filed Should not be blank</errorMessage>
    </validationRules>
</CustomObject>